--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\Scripts\Countdown.cs" />
     <Compile Include="Assets\Scripts\FinishLineSc.cs" />
     <Compile Include="Assets\Scripts\OffTrack.cs" />
+    <Compile Include="Assets\Scripts\TrackPath.cs" />
     <Compile Include="Assets\Scripts\WheelRotation.cs" />
     <Compile Include="Assets\Scripts\WheelsScript.cs" />
     <Reference Include="Unity.Timeline.Editor">
