--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,11 +63,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\AI\AI2Scrpit.cs" />
     <Compile Include="Assets\Scripts\AI\AIfinishLn.cs" />
     <Compile Include="Assets\Scripts\AI\AIpathChange.cs" />
     <Compile Include="Assets\Scripts\AI\AIscript.cs" />
     <Compile Include="Assets\Scripts\AI\TrackPath.cs" />
     <Compile Include="Assets\Scripts\Countdown.cs" />
+    <Compile Include="Assets\Scripts\EndsceneSrc.cs" />
     <Compile Include="Assets\Scripts\FinishLineSc.cs" />
     <Compile Include="Assets\Scripts\LapSwitchScr.cs" />
     <Compile Include="Assets\Scripts\LapTimer.cs" />
@@ -77,6 +79,7 @@
     <Compile Include="Assets\Scripts\Player\CameraFollow.cs" />
     <Compile Include="Assets\Scripts\Player\CarController.cs" />
     <Compile Include="Assets\Scripts\Player\WheelsScript.cs" />
+    <Compile Include="Assets\Scripts\StartLineScr.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
